# Paper-Submission

./: Paper-a.sql  Paper-admin  Paper-admin.sql  Paper-c.sql  Paper-client.sql  Paper.sql  README.md  data.py  drop.sql  main.py  pyproject.toml  schema.py  stream.py  todo.txt
CPMS_Integrate/: main.py
CPMS_Integrate/templates/: Conferences.html  author_home.html  icai.html  landing.html  register.html  reviewer_profile.html  upload.html  view_pdf.html
Project/CPMS_Integrate/: Database_Creation.sql  database.ipynb  main.py
Project/CPMS_Integrate/templates/: Author_profile.html  Proceedings.html  login.html
